# Kadence

./: CMakeLists.txt  README.md
include/kadence/: config.hpp  session_analyzer.hpp  time_utils.hpp  types.hpp
src/daemon/: CMakeLists.txt  kadenced.cpp
src/libkadence/: CMakeLists.txt  kadence_core.cpp  session_analyzer.cpp  time_utils.cpp
src/overlay/: CMakeLists.txt  main.cpp
src/overlay/qml/: Overlay.qml
src/ui/: CMakeLists.txt  main.cpp
src/ui/qml/: Main.qml
